# postgres-client

./: Cargo.toml  example.pcapng
src/: frontend.rs  lib.rs  main.rs  readers.rs  state.rs
src/backend/: async.rs  mod.rs  sync.rs
src/messages/: backend.rs  frontend.rs  mod.rs  ssl.rs  startup.rs
src/messages/backend/: data_row.rs  empty_query_response.rs  mod.rs  no_data.rs  notice_message.rs  ready_for_query.rs  row_description.rs
