[package]
name = "rpsql"
version = "0.1.0"
edition = "2021"
default-run = "client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "proxy"

[[bin]]
name = "client"
test = false

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
rustyline = "13.0.0"
