[package]
name = "rpsql"
version = "0.1.0"
edition = "2021"
default-run = "client"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
test = false

[[bin]]
name = "proxy"
test = false

[[bin]]
name = "client"
test = false

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
futures-core = "0.3.30"
rustyline = "13.0.0"
tokio = { version = "1", features = ["full"] }
